# softsys

./: .gitignore  config.yaml  contrastive_example.ipynb  datamodule.py  dataset.py  detection.ipynb  introduction.ipynb  lit_system.py  losses.py  main.py  models.py  pyproject.toml  tests.ipynb  train.py  utils.py
