[project]
name = "softsystems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pix2text>=1.1.4",
    "protobuf>=6.31.1",
    "pytesseract>=0.3.13",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "ray[tune]>=2.24.0",
    "lightning>=2.5.5",
    "optuna>=4.5.0",
]
